[project]
name = "deeprank-gnn-esm"
version = "0.1.0"
description = "Graph Network for protein-protein interface including language model features"
authors = [
    {name="Xiaotong Xu"}, {email="x.xu1@uu.nl>"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English', 'Programming Language :: Python :: 3.9',
    'Topic :: Scientific/Engineering :: Chemistry'
]
keywords = []
# include = [
#     "LICENSE",
#     "README.md",
# ]


[project.scripts]
deeprank-gnn-esm-predict = "deeprank_gnn.predict:main"